dark mode attorney active --fix

--- a/assets/scss/layouts/_dark_mode.scss
+++ b/assets/scss/layouts/_dark_mode.scss
@@ -54,6 +54,13 @@
       color: #fff;
     }
   }
+  .garage_car-item{
+    .active{
+      span{
+        color: #000;
+      }
+    }
+  }
 }
 
 .dark-mode {
